auctionsApi and delete responses updated
